Remodeled components and updated term and definition form

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>TweetBox</title>
+  <title>Contechs</title>
 </head>
-
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="/application.bundle.js"></script>
+  <script type="text/javascript" src="/app.bundle.js"></script>
 </body>
 </html>
